# semantic-release-github

./: README.md  index.js  package.json  pnpm-lock.yaml  pyproject.toml
.config/taskfiles/ansible/: Taskfile-test.yml
.config/taskfiles/docker/: Taskfile-update.yml
.config/taskfiles/install/: Taskfile.yml
.config/taskfiles/npm/: Taskfile.yml
.config/taskfiles/publish/: Taskfile-firefox.yml
docs/: CONTRIBUTING.md
docs/partials/: guide.md
lib/: add-channel.js  fail.js  find-sr-issues.js  get-client.js  get-error.js  get-fail-comment.js  get-release-links.js  get-search-queries.js  get-success-comment.js  glob-assets.js  is-prerelease.js  parse-github-url.js  publish.js  resolve-config.js  success.js  verify.js
lib/definitions/: constants.js  errors.js  rate-limit.js
test/: add-channel.test.js  fail.test.js  find-sr-issue.test.js  get-client.test.js  get-fail-comment.test.js  get-release-links.test.js  get-search-queries.test.js  get-success-comment.test.js  glob-assets.test.js  integration.test.js  publish.test.js  success.test.js  verify.test.js
test/helpers/: mock-github.js  rate-limit.js
